--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,18 +4,18 @@
 	version="2.5">
 
 	<display-name>Courses online</display-name>
-	
-	<context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring/business-config.xml</param-value>
-    </context-param>
 
-    <!-- - Location of the XML file that defines the root application context.
-        - Applied by ContextLoaderListener. -->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/spring/business-config.xml</param-value>
+	</context-param>
+
+	<!-- - Location of the XML file that defines the root application context. 
+		- Applied by ContextLoaderListener. -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
 
 	<servlet>
 		<servlet-name>spring-web</servlet-name>
@@ -32,5 +32,15 @@
 		<servlet-name>spring-web</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	  <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 
 </web-app>
